# yabai-plus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml
.github/workflows/: release.yml
crates/yabai/: Cargo.toml
crates/yabai-core/: Cargo.toml
crates/yabai-core/src/: command.rs  geometry.rs  layout.rs  lib.rs  parser.rs  signal.rs
crates/yabai-ipc/: Cargo.toml
crates/yabai-ipc/src/: lib.rs
crates/yabai-macos/: Cargo.toml  build.rs
crates/yabai-macos/src/: ax.rs  display.rs  lib.rs  objc.rs  observe.rs  screen.rs  space.rs  workspace.rs
crates/yabai-osax-common/: Cargo.toml
crates/yabai-osax-common/src/: lib.rs
crates/yabai-osax-legacy/: Cargo.toml
crates/yabai-osax-legacy/src/: lib.rs
crates/yabai-runtime/: Cargo.toml
crates/yabai-runtime/src/: actor.rs  app_state.rs  config.rs  lib.rs  runtime.rs
crates/yabai-sa/: Cargo.toml
crates/yabai-sa/src/: client.rs  lib.rs
crates/yabai/src/: main.rs
doc/: yabai.1  yabai.asciidoc
docs/: backlog-handoff.md  debugging.md  releasing.md  rust-rewrite-compat.md  rust-rewrite-handoff.md
scripts/: install.sh
src/: manifest.m  message.c  sa.h  sa.m  space_manager.c  window_manager.c  window_manager.h  yabai.c
src/misc/: helpers.h
