[workspace]
resolver = "3"
members = [
    "crates/yabai",
    "crates/yabai-core",
    "crates/yabai-ipc",
    "crates/yabai-macos",
    "crates/yabai-osax-common",
    "crates/yabai-osax-legacy",
    "crates/yabai-runtime",
    "crates/yabai-sa",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
